// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkInsertDocSchema should compare complex schemas on insertion 1`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"title\\": \\"string\\",
  \\"director\\": \\"string\\",
  \\"cast\\": {
    \\"photography\\": {
      \\"person1\\": \\"string\\",
      \\"person2\\": \\"string\\"
    }
  }
}

but found the following doc:

{
  \\"title\\": \\"The prestige\\",
  \\"foo\\": {
    \\"bar\\": 10
  }
}"
`;

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 1`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"author\\": true
}"
`;

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 2`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"authors\\": \\"author should be singular\\"
}"
`;

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 3`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"foo\\": {
    \\"bar\\": 10
  }
}"
`;
